header spacing fixed

--- a/server/public/styles/editForm.css
+++ b/server/public/styles/editForm.css
@@ -2,9 +2,9 @@ body {
     font-family: "Verdana";
 }
 
-h1 {
+/* h1 {
     text-align: center;
-}
+} */
 
 .editUserInput {
     margin: 10px;
