--- a/server/public/styles/header.css
+++ b/server/public/styles/header.css
@@ -6,5 +6,9 @@
     background-color: rgba(228, 228, 228, 0.35);
     color: #DDDDDD;
     box-shadow: 0 5px 5px rgb(71, 71, 71);
-    /* padding: 15px; */
+    padding: 15px;
+}
+
+.bannerTitle {
+    text-shadow: rgb(235, 37, 37) 0.1em 0.1em 0.2em;
 }
